doubts section changed

--- a/css/styles-doubts.css
+++ b/css/styles-doubts.css
@@ -62,9 +62,51 @@ a:hover {
 }
 
 .faq {
+  padding: 15px;
   display: inline-block;
   background-color: #FFE3E3;
   margin: 20px auto;
   border: 2px solid #423F3E;
   border-radius: 5px;
+}
+
+.doubt-heading {
+  display: inline-block;
+  margin: 50px auto 20px;
+  border: 2px solid #423F3E;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.doubt-heading:hover {
+  color: #6E85B2;
+}
+
+
+.custom {
+  background-color: #EEEEEE;
+  text-align: center;
+  padding: 10px 20px;
+}
+
+.name {
+  font-family: 'Kaushan Script', sans-serif;
+}
+
+.name-link {
+  text-decoration: none;
+}
+
+.logo-img {
+  height: 35px;
+}
+
+.home-button, .admission-button {
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 5px;
+}
+
+.home-button:hover, .admission-button:hover {
+  color: blue;
 }
