--- a/css/styles-home.css
+++ b/css/styles-home.css
@@ -1,11 +1,3 @@
-.first-container {
-  background-image: url("../images/education.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  padding: 80px 0;
-}
 
 body {
   text-align: center;
@@ -18,8 +10,181 @@ html {
   overflow-x: hidden;
 }
 
-.custom {
-  padding: 10px 20px;
+.new-container {
+  width: 100%;
+  background-color: rgba(200, 175, 175, 0.5);
+  background-image: linear-gradient(135deg, rgba(200, 175, 175, 0.5), #E05D5D);
+  overflow-x: hidden;
+  transform-style: preserve-3d;
+}
+
+.navbar {
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  height: 6rem;
+}
+
+.menu {
+  max-width: 72rem;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.hamburger-menu {
+  height: 4rem;
+  width: 3rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.bar {
+  width: 1.9rem;
+  height: 1.5px;
+  border-radius: 2px;
+  background-color: white;
+  transition: 0.5s;
+  position: relative;
+}
+
+.bar:before, .bar:after {
+  content: "";
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  background-color: white;
+  transition: 0.5s;
+  right: 0px;
+}
+
+.bar:before {
+  transform: translateY(-9px);
+}
+
+.bar:after {
+  transform: translateY(9px);
+}
+
+.main {
+  position: relative;
+  width: 100%;
+  left: 0;
+  z-index: 5;
+  overflow: hidden;
+  transform-origin: left;
+  transform-style: preserve-3d;
+  transition: 0.5s;
+}
+
+.overlay {
+  width: 100%;
+  background: url("../images/education.jpg") no-repeat top center / cover;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(200, 175, 175, 0.5);
+}
+
+.inner {
+  text-align: center;
+  padding: 0 2rem;
+}
+
+.title {
+  font-size: 6rem;
+  padding: 40px;
+}
+
+.new-container.active .bar {
+  transform: rotate(360deg);
+  background-color: transparent;
+}
+
+.new-container.active .bar:before {
+  transform: translateY(0) rotate(45deg);
+}
+
+.new-container.active .bar:after {
+  transform: translateY(0) rotate(-45deg);
+}
+
+@keyframes main-animation {
+  from {
+    transform: translate(0);
+  }
+
+  to {
+    transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
+  }
+}
+
+.new-container.active .main {
+  animation: main-animation 0.5s ease;
+  cursor: pointer;
+  transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
+}
+
+.links {
+  padding-top: 15rem;
+  position: absolute;
+  width: 30%;
+  right: 0;
+  top: 0;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.links ul {
+  list-style: none;
+}
+
+@keyframes hide {
+  from {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+}
+
+
+.links a {
+  text-decoration: none;
+  color: #423F3E;
+  padding: 0.7rem 0;
+  display: inline-block;
+  transition: 0.3s;
+  opacity: 0;
+  transform: translateY(10px);
+  animation: hide 0.5s forwards ease ;
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.new-container.active .links a {
+  animation: appear 0.5s forwards ease 0.2s;
 }
 
 .title-div {
@@ -72,13 +237,13 @@ h3 {
   margin: 20px;
 }
 
-.teacher-button, .contact-button, .courses-button, .about-button, .home-button, .admission-button, .doubts-button {
+.teacher-button, .contact-button, .courses-button, .about-button, .admission-button, .doubts-button {
   border: 1px solid black;
   border-radius: 4px;
   padding: 5px;
 }
 
-.teacher-button:hover, .contact-button:hover, .courses-button:hover, .about-button:hover, .home-button:hover, .admission-button:hover, .doubts-button:hover {
+.teacher-button:hover, .contact-button:hover, .courses-button:hover, .about-button:hover, .admission-button:hover, .doubts-button:hover {
   color: blue;
 }
 
@@ -220,6 +385,7 @@ p, li {
 
 .logo-img {
   height: 75px;
+  z-index: 6;
 }
 
 a h6 {
