--- a/css/styles-home.css
+++ b/css/styles-home.css
@@ -134,11 +134,10 @@ html {
 }
 
 .links {
-  padding-top: 15rem;
   position: absolute;
   width: 30%;
   right: 0;
-  top: 0;
+  top: 30%;
   z-index: 2;
   display: flex;
   justify-content: center;
